# api/schemas/table_schema.go
@@ -7,6 +7,7 @@ import (
 )
 
 type CreateTableInput struct {
+	OrganizationID uuid.UUID  `json:"organization_id" validate:"required"`
 	Name           string     `json:"name" validate:"required,lte=100"`
 	ParentFolderID *uuid.UUID `json:"parent_folder_id"`
 }
