# doc/api.yaml
@@ -62,8 +62,6 @@ paths:
         "200":
           description: Deleted
   /tables:
-    parameters:
-      - $ref: "#/parameters/organizationIdHeader"
     post:
       tags:
         - Table
@@ -77,7 +75,6 @@ paths:
             $ref: "#/definitions/Table"
   /tables/{tableId}:
     parameters:
-      - $ref: "#/parameters/organizationIdHeader"
       - $ref: "#/parameters/tableId"
     get:
       tags:
@@ -107,8 +104,6 @@ paths:
         "200":
           description: Deleted
   /folders:
-    parameters:
-      - $ref: "#/parameters/organizationIdHeader"
     post:
       tags:
         - Folder
@@ -122,7 +117,6 @@ paths:
             $ref: "#/definitions/Folder"
   /folders/{folderId}:
     parameters:
-      - $ref: "#/parameters/organizationIdHeader"
       - $ref: "#/parameters/folderId"
     get:
       tags:
@@ -153,8 +147,8 @@ paths:
           description: Deleted
   /folders/{folderId}/children:
     parameters:
-      - $ref: "#/parameters/organizationIdHeader"
       - $ref: "#/parameters/folderId"
+      - $ref: "#/parameters/organizationIdQuery"
       - $ref: "#/parameters/page"
       - $ref: "#/parameters/pageSize"
     get:
@@ -167,15 +161,15 @@ paths:
           schema:
             $ref: "#/definitions/FolderChildren"
 parameters:
-  organizationIdHeader:
-    in: header
-    name: X-ORGANIZATION-ID
-    required: true
-    type: string
   organizationId:
     in: path
     name: organizationId
     required: true
+    type: string
+  organizationIdQuery:
+    in: query
+    name: organizationId
+    required: false
     type: string
   tableId:
     in: path
@@ -334,8 +328,12 @@ definitions:
   CreateTableInput:
     type: object
     required:
+      - organization_id
       - name
     properties:
+      organization_id:
+        type: string
+        format: uuid
       name:
         type: string
       parent_folder_id:
@@ -363,8 +361,12 @@ definitions:
   CreateFolderInput:
     type: object
     required:
+      - organization_id
       - name
     properties:
+      organization_id:
+        type: string
+        format: uuid
       name:
         type: string
       parent_folder_id:
